--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "osnaren_webtips",
   "version": "1.0.0",
   "description": "WeatherApp",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "node-fetch": "^3.0.0",
     "node-static": "^0.7.11",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "weather-tzone": "^1.0.0"
   }
 }
